--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,10 +26,10 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation project(path: ':printooth')
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.github.danielfelgar:draw-receipt:0.1.3'
-    implementation 'com.github.mazenrashed:Printooth:1.2.2'
     implementation 'com.squareup.picasso:picasso:2.71828'
 }
