--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,12 @@ android {
     compileSdkVersion 30
     defaultConfig {
         applicationId "shubh.dynamiclistview"
-        minSdkVersion 24
+        minSdkVersion 19
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -32,4 +33,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.github.danielfelgar:draw-receipt:0.1.3'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.github.mudassar1:SearchableSpinner:v1.1'
 }
